welcome.lessons.welcome.bdr.BDR.scala.error
BDRBuggle:1: error: value B is not a member of Int
var A=1 B=2 L=12 R=18 X=24 Z=26
        ^BDRBuggle:2: error: not found: type !=
if (litMessage(): String!=A) {
                        ^